<resources>
    <string name="app_name">SnackbarChallenge</string>
    <string name="geoquiz">Geo Quiz</string>
    <string name="question_amazon">The Amazon River is the longest river in the world.</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>

    <string name="question_australia">Canberra is the capital of Australia.</string>
    <string name="question_oceans">The Pacific Ocean is larger than
 the Atlantic Ocean.</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea
 and the Indian Ocean.</string>
    <string name="question_africa">The source of the Nile River is in Egypt.</string>
    <string name="question_americas">The Amazon River is the longest river
 in the Americas.</string>
    <string name="question_asia">Lake Baikal is the world\'s oldest and deepest
 freshwater lake.</string>
    <string name="next_question">Next</string>
</resources>