<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/black"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="00dp"
        android:textStyle="bold"
        android:text="@string/geoquiz"
        android:textColor="@color/white"
        android:textSize="50sp">

    </TextView>

    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:textColor="@android:color/holo_green_light"
        android:text="@string/question_amazon" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/TrueButton"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:text="@string/true_button"
              />

        <Button
            android:id="@+id/FalseButton"

            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:text="@string/false_button"

              />
    </LinearLayout>

    <Button
        android:id="@+id/NextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@android:color/holo_green_light"
        android:text="@string/next_question"
        android:textColor="@color/white"
        android:textSize="15sp" />
</LinearLayout>
